--- a/src/App.css
+++ b/src/App.css
@@ -13,6 +13,7 @@ body {
   display: flex;
   flex-direction: column;
   align-items: center;
+  row-gap: .3rem;
   justify-content: flex-start;
   width: 40vw;
   height: 80vh;
@@ -33,6 +34,10 @@ button {
   color: white;
   border:none;
   font-size: 1.5rem;
+  outline: none;
+  width:50% !important;
+  padding-block:.2rem ;
+  height: auto !important;
 }
 
 .green {
@@ -40,7 +45,7 @@ button {
 }
 
 .green:hover {
-  transform: scale(1.22);
+  transform: scale(1.02);
 }
 
 .blue {
@@ -49,7 +54,7 @@ button {
 }
 
 .blue:hover {
-  transform: scale(1.15);
+  transform: scale(1.05);
 }
 
 .task {
@@ -60,8 +65,8 @@ button {
 }
 
 input {
-  width: 30px;
-  height: 30px;
+  width: 1.5rem;
+  height: 1.5rem;
   transition: box-shadow .3s;
   background: lightgrey;
   text-align: center;
@@ -71,7 +76,8 @@ input {
   background: lightgrey;
   cursor: pointer;
   border: 0.1px dashed rgb(24, 2, 105);
-  appearance: none; -webkit-appearance: none; 
+  appearance: none;
+  -webkit-appearance: none; 
 }
 input:checked { 
   box-shadow: inset 0 0 0 20px rgb(24, 2, 105);
